# ido-auth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/ido_auth/: main.py
src/ido_auth/registration/: exceptions.py  logic.py  models.py  routes.py
static/: index.html  script.js  simplewebauthn-browser.5.2.1.umd.min.js
