[metadata]
name = ido_auth
description = Ido Auth API
author = Ido Slonimsky
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    ido_auth
install_requires =
    fastapi>=0.78.0
    loguru>=0.6.0
    pydantic>=1.9.1
    uvicorn[standard]>=0.18.1
    webauthn>=1.5.2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.2

[options.package_data]
client_api = py.typed

[flake8]
max-line-length = 120
